Implemented naive json formatting
To cut away the header one can use: | sed '0,/^All.*[0-9]\+$/d'